--- a/mapbook-app/src/main/res/values/app_settings.xml
+++ b/mapbook-app/src/main/res/values/app_settings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- TODO: add your own client id here-->
-    <string name="client_id">YOUR_CLIENT_ID</string>
+    <string name="client_id">dwiufZvIY08RV4hd</string>
 
     <!-- This redirect URI is the default value for https://www.arcgis.com -->
     <string name="redirect_uri">my-ags-app://auth</string>
